some comments added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Year</title>
+    <title>New Year </title>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Open+Sans&family=Poppins:ital@0;1&family=Raleway&family=Work+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/style.css">
 </head>
@@ -50,7 +50,7 @@
                 <img src="/images/person-happy.png" alt="">
             </div>
         </section>
- <!-- plan section started  -->
+     <!-- plans section started  -->
 
         <section class="plans">
             <h4>My Plans</h4>
@@ -79,7 +79,7 @@
             </div>
         </section>
 
-<!-- mindset section started  -->
+    <!-- mindset section started  -->
         <section class="mindset">
             <h4>Always keep a positive <br> mindset</h4>
             <button>Call Now</button>
