image unload resolved

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- failures section  -->
         <section class="failures">
             <div class="failures-img">
-                <img src="/images/person.png" alt="">
+                <img src="images/person.png" alt="">
             </div>
             <div class="failures-text">
                 <h4>My failures of <br> previous year</h4>
@@ -47,7 +47,7 @@
                 Contrary to popular simply.</p>
             </div>
             <div class="success-img">
-                <img src="/images/person-happy.png" alt="">
+                <img src="images/person-happy.png" alt="">
             </div>
         </section>
      <!-- plans section started  -->
@@ -56,22 +56,22 @@
             <h4>My Plans</h4>
             <div class="plans-container">
                 <div class="plan-div">
-                    <img src="/images/icons/web.png" alt="">
+                    <img src="images/icons/web.png" alt="">
                     <h5>Web Development</h5>
                     <p>I want to start</p>
                 </div>
                 <div class="plan-div">
-                    <img src="/images/icons/js.png" alt="">
+                    <img src="images/icons/js.png" alt="">
                     <h5>JavaScript</h5>
                     <p>I want to learn</p>
                 </div>
                 <div class="plan-div">
-                    <img src="/images/icons/smoke.png" alt="">
+                    <img src="images/icons/smoke.png" alt="">
                     <h5>Smoking Habit</h5>
                     <p>I want to end</p>
                 </div>
                 <div class="plan-div">
-                    <img src="/images/icons/ecom.png" alt="">
+                    <img src="images/icons/ecom.png" alt="">
                     <h5>eComerce</h5>
                     <p>I want to develop</p>
                 </div>
@@ -95,9 +95,9 @@
             <p class="future-p2">Email : info@gmail.com</p>
             <p class="future-p3">Phone : 01500 00 00 00</p>
             <div class="future-icon">
-                <a href="#"><img src="/images/icons/fb.png" alt="facebook.com"></a>
-                <a href="#"><img src="/images/icons/twitter.png" alt="twitter.com"></a>
-                <a href="#"><img src="/images/icons/youtube.png" alt="youtube.com"></a>
+                <a href="#"><img src="images/icons/fb.png" alt="facebook.com"></a>
+                <a href="#"><img src="images/icons/twitter.png" alt="twitter.com"></a>
+                <a href="#"><img src="images/icons/youtube.png" alt="youtube.com"></a>
             </div>
         </div>
         <div class="subscribe">
