line break fixed

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="failures-text">
                 <h4>My failures of <br> previous year</h4>
                 <p class="failures-subtitle1">Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots in a piece of <br> classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.</p>
-                <p class="failures-subtitle2">Contrary to popular belief, is not simply.
+                <p class="failures-subtitle2">Contrary to popular belief, is not simply. <br>
                 Contrary to popular belief. <br>
                 Contrary to popular , is not simply. <br>
                 Contrary to popular belief, is not simply. <br>
@@ -40,7 +40,7 @@
             <div class="success-text">
                 <h4>My successes of <br> previous year</h4>
                 <p class="success-subtitle1">Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots in a piece of <br> classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.</p>
-                <p class="success-subtitle2">Contrary to popular belief, is not simply.
+                <p class="success-subtitle2">Contrary to popular belief, is not simply. <br>
                 Contrary to popular belief. <br>
                 Contrary to popular , is not simply. <br>
                 Contrary to popular belief, is not simply. <br>
